footer added to home from abuot page

--- a/public/index.html
+++ b/public/index.html
@@ -45,7 +45,7 @@
     }    
 </style>
 
-  <link rel='stylesheet' id='wp-block-library-css' href='static-ca/ca-one.css' type='text/css' media='all' />
+  <!-- <link rel='stylesheet' id='wp-block-library-css' href='static-ca/ca-one.css' type='text/css' media='all' /> -->
   <link rel="stylesheet" href="static-ca/iterations.css" />
   <link rel="stylesheet" href="static/css/new-home.css">
 
@@ -448,53 +448,44 @@
 
 
 
+<footer class="container-full text-white" style="background-image: url('../static/img/woods/burgandy.webp');">
+  <div class="container ">
+    <article class="d-flex flex-wrap justify-content-between align-items-center py-3">
+        
+      <!-- <p class="col-md-4 mb-0  text-white">&copy; 2024 Company, Inc 1</p> -->
+        <img width="75px"  src="../static/logo/l1.webp" alt="">
+  
+      <a href="/" class="col-md-3 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
+        <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"/></svg>
+      </a>
+  
+      <ul class="nav col-md-4 text-white justify-content-end">
+        <li class="nav-item r-5"><a href="#" class="nav-link px-2  text-white">About us</a></li>
+        <li class="nav-item r-5"><a href="#" class="nav-link px-2  text-white">Careers</a></li>
+        <li class="nav-item r-5"><a href="#" class="nav-link px-2  text-white">Investors</a></li>
+        
+      </ul>
+    </article>
 
-<footer class="container py-5">
-  <div class="row">
-    <div class="col-12 col-md">
-      <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="d-block mb-2" role="img" viewBox="0 0 24 24"><title>Product</title><circle cx="12" cy="12" r="10"/><path d="M14.31 8l5.74 9.94M9.69 8h11.48M7.38 12l5.74-9.94M9.69 16L3.95 6.06M14.31 16H2.83m13.79-4l-5.74 9.94"/></svg>
-      <small class="d-block mb-3 text-body-secondary">&copy; 2017–2024</small>
-    </div>
-    <div class="col-6 col-md">
-      <h5>Features</h5>
-      <ul class="list-unstyled text-small">
-        <li><a class="link-secondary text-decoration-none" href="#">Cool stuff</a></li>
-        <li><a class="link-secondary text-decoration-none" href="#">Random feature</a></li>
-        <li><a class="link-secondary text-decoration-none" href="#">Team feature</a></li>
-        <li><a class="link-secondary text-decoration-none" href="#">Stuff for developers</a></li>
-        <li><a class="link-secondary text-decoration-none" href="#">Another one</a></li>
-        <li><a class="link-secondary text-decoration-none" href="#">Last time</a></li>
+
+    <article class="d-flex flex-wrap justify-content-between align-items-center py-3">
+      <p class="col-md-4 mb-0 ">&copy; 2024 Company, Inc</p>
+  
+      <a href="/" class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
+        <!-- <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"/></svg> -->
+      </a>
+  
+      <ul class="nav col-md-12 justify-content-end">
+        <li class=" "><a href="#" class="nav-link   text-white">Terms</a></li>
+        <!-- <li class="nav-item"><a href="#" class="nav-link px-2  text-white">|</a></li> -->
+        <li class=""><a href="#" class="nav-link   text-white">Privacy</a></li>
+        <p style="opacity: .4"> Any opinions or views stated on this website are subject to change without notice for any reason, and Equity Group reserves the right in its sole discretion, at any time and from time to time, to add, modify, or remove any of the information without any notice to you. Equity Group does not undertake, any obligation to update these webpages or otherwise notify you in the event that any views, opinions or facts stated on these webpages change or subsequently become inaccurate except to the extent required under any separate agreement between you and Equity Group.</p>
       </ul>
-    </div>
-    <div class="col-6 col-md">
-      <h5>Resources</h5>
-      <ul class="list-unstyled text-small">
-        <li><a class="link-secondary text-decoration-none" href="#">Resource name</a></li>
-        <li><a class="link-secondary text-decoration-none" href="#">Resource</a></li>
-        <li><a class="link-secondary text-decoration-none" href="#">Another resource</a></li>
-        <li><a class="link-secondary text-decoration-none" href="#">Final resource</a></li>
-      </ul>
-    </div>
-    <div class="col-6 col-md">
-      <h5>Resources</h5>
-      <ul class="list-unstyled text-small">
-        <li><a class="link-secondary text-decoration-none" href="#">Business</a></li>
-        <li><a class="link-secondary text-decoration-none" href="#">Education</a></li>
-        <li><a class="link-secondary text-decoration-none" href="#">Government</a></li>
-        <li><a class="link-secondary text-decoration-none" href="#">Gaming</a></li>
-      </ul>
-    </div>
-    <div class="col-6 col-md">
-      <h5>About</h5>
-      <ul class="list-unstyled text-small">
-        <li><a class="link-secondary text-decoration-none" href="#">Team</a></li>
-        <li><a class="link-secondary text-decoration-none" href="#">Locations</a></li>
-        <li><a class="link-secondary text-decoration-none" href="#">Privacy</a></li>
-        <li><a class="link-secondary text-decoration-none" href="#">Terms</a></li>
-      </ul>
-    </div>
+    </article>
   </div>
 </footer>
+
+
 <script src="assets/dist/js/bootstrap.bundle.min.js"></script>
 
 
