--- a/public/join-us/index.html
+++ b/public/join-us/index.html
@@ -98,11 +98,11 @@
 
 <style>
   @font-face {
-    font-family: eqsans;
-    src: url(../themes/fonts/Nunito/Nunito-Regular.ttf);
+  font-family: eqsans;
+  src: url(../themes/fonts/Nunito/Nunito-Regular.ttf);
   }
   h1, h2, h3, h4, p, div, li, a  {
-    font-family: eqsans;
+  font-family: eqsans;
   }
 </style>
 
@@ -171,7 +171,7 @@
 <main>
 
   <!-- style="filter: brightness(75%); -->
-  <div class="text-secondary px-5 py-5 " style="background-image: url('../../static/img/people/meeting-dec11-c.jpg');  background-size:cover; background-position: 21%; ">
+  <section class="text-secondary px-5 py-5 h-100" style="background-image: url('../static/img/Office/joinus1-c.jpg');  background-size:cover; background-position: 21%; ">
 
     <div class="py-5">  
     <div class="row align-items-center g-lg-5 py-5">
@@ -182,7 +182,7 @@
       </div>
 
     <div class="py-5">
-      <h1 class="display-5 text-white">About us</h1>
+      <h1 class="display-5 text-white">Join us</h1>
       <div class="col-lg-6 mx-auto">
         <!-- <p class="fs-5 mb-4">Quickly design and customize responsive mobile-first sites with Bootstrap, the world’s most popular front-end open source toolkit, featuring Sass variables and mixins, responsive grid system, extensive prebuilt components, and powerful JavaScript plugins.</p> -->
         
@@ -190,7 +190,7 @@
     </div>
   </div>
   </div>
-  </div>
+  </section>
 
 
 
