fixed hoem page constriuct divs

--- a/public/about/index.html
+++ b/public/about/index.html
@@ -215,7 +215,11 @@
         <p class="lead">Many Americans view homeownership as a critical piece of “the American dream.”
           <br>
           We provide an individualized approach that helps them achieve their goal so they can live with a peace of mind and look forward to future with a bright smile. </p>
-          <button>Read faq</button>
+
+          
+            <a class=" button wooden-a mt-4" style="text-transform: capitalize; text-decoration: none;" href="/free-discovery-call/" > Read faq </a>
+          
+
     </article>
 
 
@@ -259,7 +263,8 @@
       <p class="lead mb-3 text-start my-3">Our recruitment process is very quick. We make decision in
         days.</p>
       <div class="py-4 d-grid gap-2 d-sm-flex justify-content-sm-start my-5">
-        <button type="button" class="btn btn-primary btn-lg px-4 gap-3">View Openings</button>
+        <!-- <button type="button" class="btn btn-primary btn-lg px-4 gap-3">View Openings</button> -->
+        <a class=" button wooden-a mt-4" style="text-transform: capitalize; text-decoration: none;" href="/free-discovery-call/" > View Openings </a>
       </div>
     </div>
   </div>
