--- a/public/about/index.html
+++ b/public/about/index.html
@@ -131,11 +131,11 @@
                   <div class="collapse navbar-collapse  " id="navbarSupportedContent">
                     <ul class="navbar-nav  mb-2 mb-lg-0 ms-auto">  <!--Jay changed here -->
                       <li class="nav-item">
-                        <a class="nav-link active text-white" aria-current="page" href="#">About</a>
+                        <a class="nav-link active text-white" aria-current="page" href="/about">About</a>
                       </li>
                     
                       <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle text-white" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        <a class="nav-link dropdown-toggle text-white" href="/join-us" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                             Join us
                         </a>
                         <ul class="dropdown-menu text-white">
