--- a/public/join-us/index.html
+++ b/public/join-us/index.html
@@ -131,7 +131,7 @@
                   <div class="collapse navbar-collapse  " id="navbarSupportedContent">
                     <ul class="navbar-nav  mb-2 mb-lg-0 ms-auto">  <!--Jay changed here -->
                       <li class="nav-item">
-                        <a class="nav-link active text-white" aria-current="page" href="#">About</a>
+                        <a class="nav-link active text-white" aria-current="page" href="/about">About</a>
                       </li>
                     
                       <li class="nav-item dropdown">
