--- a/public/index.html
+++ b/public/index.html
@@ -75,70 +75,61 @@
 </head>
 
 <body>
-
-  <div class="">
-    <nav class="navbar navbar-expand-lg">
-      <div class="container-fluid">
-        <!-- <a class="navbar-brand" href="#">Navbar1</a> -->
-        <a class="navbar-brand" href="/">
-          <img width="50px" src="../static/logo/l1.webp" alt="">
-        </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse  " id="navbarSupportedContent">
-          <ul class="navbar-nav  mb-2 mb-lg-0 ms-auto">
-            <!--Jay changed here -->
-            <li class="nav-item">
-              <a class="nav-link active text-white" aria-current="page" href="/about">About</a>
-            </li>
-
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle text-white" href="#" role="button" data-bs-toggle="dropdown"
-                aria-expanded="false">
-                Join us
-              </a>
-              <ul class="dropdown-menu text-white">
-                <li><a class="dropdown-item" href="#">Project Manager</a></li>
-                <li>
-                  <hr class="dropdown-divider">
-                </li>
-                <li><a class="dropdown-item" href="#">Construction Manager</a></li>
-                <li>
-                  <hr class="dropdown-divider">
-                </li>
-                <li><a class="dropdown-item" href="#">VP of Land Development </a></li>
-                <li>
-                  <hr class="dropdown-divider">
-                </li>
-                <li><a class="dropdown-item" href="/join-us">All opening </a></li>
-              </ul>
-            </li>
-
-            <li class="nav-item">
-              <a class="nav-link text-white" href="#">Contact</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link text-white" href="#">Free discovery call</a> <!--  Jay - make it ghost button -->
-            </li>
-
-          </ul>
-          <!-- <form class="d-flex" role="search">
-                        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                        <button class="btn btn-outline-success" type="submit">Search</button>
-                      </form> -->
-        </div>
-      </div>
-    </nav>
-
-  </div>
-
   <main>
 
+ <!-- nav start -->
+ <nav class="navbar navbar-expand-lg">
+  <div class="container-fluid">
+    <!-- <a class="navbar-brand" href="#">Navbar1</a> -->
+    <a class="navbar-brand" href="/">
+      <img width="50px" src="../static/logo/l1.webp" alt="">
+    </a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse  " id="navbarSupportedContent">
+      <ul class="navbar-nav  mb-2 mb-lg-0 ms-auto">
+        <!--Jay changed here -->
+        <li class="nav-item">
+          <a class="nav-link active text-white" aria-current="page" href="/about">About</a>
+        </li>
 
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle text-white" href="#" role="button" data-bs-toggle="dropdown"
+            aria-expanded="false">
+            Join us
+          </a>
+          <ul class="dropdown-menu text-white">
+            <li><a class="dropdown-item" href="#">Project Manager</a></li>
+            <li>
+              <hr class="dropdown-divider">
+            </li>
+            <li><a class="dropdown-item" href="#">Construction Manager</a></li>
+            <li>
+              <hr class="dropdown-divider">
+            </li>
+            <li><a class="dropdown-item" href="#">VP of Land Development </a></li>
+            <li>
+              <hr class="dropdown-divider">
+            </li>
+            <li><a class="dropdown-item" href="/join-us">All opening </a></li>
+          </ul>
+        </li>
 
-    <div class="p-4 p-md-5 mb-4 text-dark rounded bg-light bg-imgo ">
+        <li class="nav-item">
+          <a class="nav-link text-white" href="#">Contact</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link text-white" href="#">Free discovery call</a> <!--  Jay - make it ghost button -->
+        </li>
+
+      </ul>
+    </div>
+  </div>
+</nav>
+ <!-- nav end  -->
+    <div class="p-4 p-md-5 mb-4 text-dark rounded bg-imgo ">
       <article class="top-article">
         <div class="col-md-6 px-0">
           <h1 id="top-form" style="color:white" class="display-4  top-text-h"> We help Americans achieve their dream of
