--- a/public/about/index.html
+++ b/public/about/index.html
@@ -172,7 +172,7 @@
 <main>
 
   <!-- style="filter: brightness(75%); -->
-  <div class="text-secondary px-5 py-5 " style="background-image: url('../../static/img/people/meeting-dec11-c.jpg');  background-size:cover; background-position: 21%; ">
+  <section class="about-pic text-secondary px-5 py-5 " style="background-image: url('../../static/img/people/meeting-dec11-c.jpg');  background-size:cover; background-position: 21%; ">
 
     <div class="py-5">  
     <div class="row align-items-center g-lg-5 py-5">
@@ -191,7 +191,7 @@
     </div>
   </div>
   </div>
-  </div>
+  </section>
 
 
 
@@ -255,12 +255,12 @@
 
 
 
-  <section class="container-full">
+  <section class="container-full letswork">
 
-  <div class="px-5 py-5  text-white" style="min-height: 550px; background-image: url('../../static/img/woods/wood1.jpeg'); background-position:center; background-size: cover">
+  <div class="px-5 py-5  text-white" style="background-image: url('../../static/img/woods/wood1.jpeg'); background-position:center; background-size: cover">
     
     <p class="lead pt-5 mb-4">CAREERS</p>
-    <h1 class="display-5 text-start my-5" data-aos="fade-right"  data-aos-delay="50"data-aos-duration="1000"data-aos-easing="ease-in-out" >Let's work together</h1>
+    <h1 class="display-4 text-start my-5" data-aos="fade-right"  data-aos-delay="50"data-aos-duration="1000"data-aos-easing="ease-in-out" >Let's work together</h1>
     <div class="col-lg-6">
       <p class="lead mb-3 text-start my-3">Our recruitment process is very quick. We make decision in
         days.</p>
