better lets work on mobile view, but need to fix the desktop too

--- a/public/about/index.html
+++ b/public/about/index.html
@@ -255,18 +255,20 @@
 
 
 
-  <section class="container-full letswork">
+  <!-- <section class="container-full letswork"> -->
+    <section class="container-full letswork" style="background-image: url('../../static/img/woods/wood1.jpeg'); background-position:center; background-size: cover">
+<!-- <div class="container "> -->
+  <!-- <div class="letswork-inner px-5 py-5  text-white" style="background-image: url('../../static/img/woods/wood1.jpeg'); background-position:center; background-size: cover"> -->
+    <div class="container text-white" style="background-image: url('../../static/img/woods/wood1.jpeg'); background-position:center; background-size: cover">
 
-  <div class="px-5 py-5  text-white" style="background-image: url('../../static/img/woods/wood1.jpeg'); background-position:center; background-size: cover">
-    
-    <p class="lead pt-5 mb-4">CAREERS</p>
+    <p class="pt-5 mb-4">CAREERS</p>
     <h1 class="display-5 text-start my-5" data-aos="fade-right"  data-aos-delay="50"data-aos-duration="1000"data-aos-easing="ease-in-out" >Let's work together</h1>
     <div class="col-lg-6">
       <p class="lead mb-3 text-start my-3">Our recruitment process is very quick. We make decision in
         days.</p>
-      <div class="py-4 d-grid gap-2 d-sm-flex justify-content-sm-start my-5">
-        <!-- <button type="button" class="btn btn-primary btn-lg px-4 gap-3">View Openings</button> -->
-        <a class=" button wooden-a mt-4" style="text-transform: capitalize; text-decoration: none;" href="/free-discovery-call/" > VIEW OPENINGS </a>
+        <!-- py-4 -->
+      <div class="d-grid gap-2 d-sm-flex justify-content-sm-start my-5">
+        <a class="vieOpening button wooden-a mt-4" style="text-transform: capitalize; text-decoration: none;" href="/free-discovery-call/" > VIEW OPENINGS </a>
       </div>
     </div>
   </div>
