input p-text class

--- a/public/index.html
+++ b/public/index.html
@@ -101,7 +101,7 @@
             Join us
           </a>
           <ul class="dropdown-menu text-white">
-            <li><a class="dropdown-item" href="#">Project Manager</a></li>
+            <li><a class="dropdown-item" href="paul">Project Manager</a></li>
             <li>
               <hr class="dropdown-divider">
             </li>
