--- a/public/paul/index.html
+++ b/public/paul/index.html
@@ -122,7 +122,8 @@
      <div class="row align-items-md-stretch py-4 ">
       <div class="col-md-8 ms-auto order-sm-1 ">
         <div style="color: white;" class="h-100 p-5 rounded-3 ">
-            <p class="display-8 mb-4 ">Equity Group</p>
+          <p class="trail"><span class="hr"></span>EQUITY GROUP</p>
+            <!-- <p class="display-8 mb-4 ">EQUITY GROUP</p> -->
                 <h3 class="display-2 ">Paul Foster</h3>
                 <h4 class="display-7 mb-4">M&A Director, EQGPI</h4>
                 <p class="display-8 mb-4">Director, Equity Group</p>
