--- a/public/about/index.html
+++ b/public/about/index.html
@@ -198,28 +198,29 @@
   <section class="container">
   <div class="row py-5">
     <article class="col-md-7" style="margin-bottom:40px">
-      <h2 class="featurette-heading fw-normal lh-1"  data-aos="fade-right"  data-aos-delay="50"data-aos-duration="1000"data-aos-easing="ease-in-out" > Who we are  
-        <!-- <span class="text-body-secondary">It’ll blow your mind.</span> -->
-      </h2>
-      <p class="lead"> We help Americans navigate the challenges facing building their beautiful home.</p>
+      
+      <p class="trail"><span class="hr"></span>Who we are</p>
+      <br/>
+      <p class="p-text"> We help Americans navigate the challenges facing building their beautiful home.</p>
 
       <h2 class="featurette-heading fw-normal lh-1 py-3" data-aos="fade-right"  data-aos-delay="50"data-aos-duration="1000"data-aos-easing="ease-in-out" > 200+ years </h2>
-      <p class="lead">of experience in Business & M&A. </p>
+      <p class="p-text">of experience in Business & M&A. </p>
 
       <h2 class="featurette-heading fw-normal lh-1 py-3" data-aos="fade-right"  data-aos-delay="50"data-aos-duration="1000"data-aos-easing="ease-in-out" > 100+ years </h2>
-      <p class="lead">of experience in management, finance and legal expertise in the industry. </p>
+      <p class="p-text">of experience in management, finance and legal expertise in the industry. </p>
 
       <h2 class="featurette-heading fw-normal lh-1 py-3"  > Done 1000s </h2>
-      <p class="lead">of deals in various industries. </p>
+      <p class="p-text">of deals in various industries. </p>
 
-        <hr>
+        <hr class="trail">
 
-        <p class="lead" style="margin-bottom: 75px;">Many Americans view homeownership as a critical piece of “the American dream.”
-          <br>
-          We provide an individualized approach that helps them achieve their goal so they can live with a peace of mind and look forward to future with a bright smile. </p>
+        <p class="p-text" style="margin-bottom: 75px;">Many Americans view homeownership as a critical piece of “the American dream.”
+          <br><br>
+          We provide an individualized approach that helps them achieve their goal so they can live with a peace of mind and look forward to future with a bright smile. 
+        </p>
 
             <div>
-            <a class=" button wooden-a mt-4" style="text-transform: capitalize; text-decoration: none;" href="/free-discovery-call/" > READ FAQ </a>
+              <a class=" button wooden-a mt-4" style="text-transform: capitalize; text-decoration: none;" href="/free-discovery-call/" > READ FAQ </a>
           </div>
 
     </article>
@@ -265,8 +266,10 @@
       class="hr"></span>CAREERS</p>
     <h1 class="display-5 text-start my-5" data-aos="fade-right"  data-aos-delay="50"data-aos-duration="1000"data-aos-easing="ease-in-out" >Let's work together</h1>
     <div class="col-lg-6">
-      <p class="lead mb-3 text-start my-3">Our recruitment process is very quick. We make decision in
-        days.</p>
+      <!-- <p class="lead mb-3 text-start my-3">-->
+
+        <p class="p-text">Our recruitment process is very quick. We make decision in
+          days.</p>
         <!-- py-4 -->
       <div class="d-grid gap-2 d-sm-flex justify-content-sm-start">
         <a class="viewOpening button wooden-a mt-4" style="text-transform: capitalize; text-decoration: none;" href="/free-discovery-call/" > VIEW OPENINGS </a>
