--- a/public/paul/index.html
+++ b/public/paul/index.html
@@ -104,7 +104,7 @@
     }
 </style>
 
-    
+<link rel="stylesheet" href="../static/nav_style.css"> 
   </head>
   <body>
     
@@ -121,7 +121,7 @@
      <div class="row align-items-md-stretch py-4 ">
       <div class="col-md-8 ms-auto order-sm-1 ">
         <div style="color: white;" class="h-100 p-5 rounded-3 ">
-          <p class="trail"><span class="hr"></span>EQUITY GROUP</p>
+          <p class="trailw"><span class="hr"></span>EQUITY GROUP</p>
             <!-- <p class="display-8 mb-4 ">EQUITY GROUP</p> -->
                 <h3 class="display-2 ">Paul Foster</h3>
                 <h4 class="display-7 mb-4">M&A Director, EQGPI</h4>
