drop down on hover works

--- a/public/index.html
+++ b/public/index.html
@@ -396,7 +396,8 @@
               </tr>
 
               <tr>
-                <th class="table-item" scope="row"> You can make minor changes, but it shouldn't affect the bill. </th>
+                <th class="table-item" scope="row"> We will tailor our work to meet your specific needs and help you
+                  achieve your goals.  </th>
                 <td> <svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg"
                     style="display:block;fill:none;height:24px;width:24px;stroke:#00A506;stroke-width:5.333333333333333;overflow:visible"
                     aria-label="Included" role="img" focusable="false">
@@ -409,8 +410,7 @@
               </tr>
 
               <tr>
-                <th class="table-item" scope="row"> We will tailor our work to meet your specific needs and help you
-                  achieve your goals. </th>
+                <th class="table-item" scope="row">  You can make small alterations, but they should not impact the total bill. </th>
                 <td> <svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg"
                     style="display:block;fill:none;height:24px;width:24px;stroke:#00A506;stroke-width:5.333333333333333;overflow:visible"
                     aria-label="Included" role="img" focusable="false">
