--- a/public/paul/index.html
+++ b/public/paul/index.html
@@ -1,23 +1,16 @@
 <!doctype html>
-<html lang="en" data-bs-theme="auto">
-  
-
+<html lang="en" >
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     
-
     <link rel="icon" href="../../static/logo/eqlogo.png" sizes="32x32" />
     <link rel="icon" href="../../static/logo/eqlogo.png" sizes="192x192" />
     <link rel="apple-touch-icon" href="../../static/logo/eqlogo.png" />
 
     <title>Paul | Equity Group </title>
-
     <link rel="canonical" href="https://getbootstrap.com/docs/5.3/examples/jumbotron/">
-
-
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@docsearch/css@3">
-
     <link href="../assets/dist/css/bootstrap.min.css" rel="stylesheet">
 
     <style>
