--- a/public/free-discovery-call/index.html
+++ b/public/free-discovery-call/index.html
@@ -10,7 +10,7 @@
     <link rel="icon" href="../static/logo/eqlogo.png" sizes="32x32" />
   <link rel="icon" href="../static/logo/eqlogo.png" sizes="192x192" />
   <link rel="apple-touch-icon" href="../static/logo/eqlogo.png" />
-    <title>About | Equity Group </title>
+    <title>Free Discovery Call | Equity Group </title>
 
     <!-- <link rel="canonical" href="https://getbootstrap.com/docs/5.3/examples/heroes/"> -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@docsearch/css@3">
@@ -183,25 +183,24 @@
 <main>
 
   <!-- style="filter: brightness(75%); -->
-  <section class="about-pic text-secondary px-5 py-5 " style="background-image: url('../../static/img/people/meeting-dec11-c.jpg');  background-size:cover; background-position: 21%; ">
+  <section class="about-pic text-secondary px-5 py-5 " style="background-image: url('../../static/img/couples/mat-cpl-c.jpg');  background-size:cover; background-position: 21%; ">
 
     <div class="py-5">  
-    <div class="row align-items-center g-lg-5 py-5">
-      <div class="col-lg-7 text-center text-lg-start">
-        <!-- <h1 class="display-4 fw-bold lh-1 text-body-emphasis mb-3 ">About us</h1> -->
-        <h1 class="display-4 text-white" ></h1>
-        <!-- <p class="col-lg-10 fs-4">Below is an example form built entirely with Bootstrap’s form controls. Each required form group has a validation state that can be triggered by attempting to submit the form without completing it.</p> -->
-      </div>
-
-    <div class="py-5">
-      <h1 class="display-5 text-white">About us</h1>
-      <div class="col-lg-6 mx-auto">
-        <!-- <p class="fs-5 mb-4">Quickly design and customize responsive mobile-first sites with Bootstrap, the world’s most popular front-end open source toolkit, featuring Sass variables and mixins, responsive grid system, extensive prebuilt components, and powerful JavaScript plugins.</p> -->
+      <div class="row align-items-center g-lg-5 py-5">
+        <div class="col-lg-7 text-center text-lg-start">
+          <!-- <h1 class="display-4 fw-bold lh-1 text-body-emphasis mb-3 ">About us</h1> -->
+          <h1 class="display-4 text-white" ></h1>
+          <!-- <p class="col-lg-10 fs-4">Below is an example form built entirely with Bootstrap’s form controls. Each required form group has a validation state that can be triggered by attempting to submit the form without completing it.</p> -->
+        </div>
+  
+      <div class="py-5">
+        <p data-aos="fade-in" data-aos-delay="200" class="trailw aos-init aos-animate"><span class="hr"></span>
+          Stress free Valuation</p>
+        <h1 class="display-5 text-white">Free Discovery Call </h1>
         
       </div>
     </div>
-  </div>
-  </div>
+    </div>
   </section>
 
 
