started free discovery call

--- a/public/free-discovery-call/index.html
+++ b/public/free-discovery-call/index.html
@@ -204,61 +204,37 @@
   </section>
 
 
+  <section class="container-full" style="background-color: #f4f4f4;">
+      <section class="container">
+        <br/><br/>
+        <p class="trail"><span class="hr"></span> GET IN TOUCH </p>
+          <br/>
+      <div class="row py-5">
 
-  <section class="container">
-  <div class="row py-5">
-    <article class="col-md-7" style="margin-bottom:40px">
-      
-      <p class="trail"><span class="hr"></span>Who we are</p>
-      <br/>
-      <p class="p-text"> We help Americans navigate the challenges facing building their beautiful home.</p>
+        <article class="col-md-4" style="margin-bottom:40px">
+          <h2 class="">  Please fill the short form below </h2>
+          <h6> We will send you more information.</h6>
+        </article>
 
-      <h2 class="fw-normal lh-1 py-3" data-aos="fade-right"  data-aos-delay="50"data-aos-duration="1000"data-aos-easing="ease-in-out" > 200+ years </h2>
-      <p class="p-text">of experience in Business & M&A. </p>
+        <article class="col-md-4" style="margin-bottom:40px">
+          <h3>  Home Building Enquiries </h3>
+          <h6> Its absolutely free of cost. </h6>
+            <p>Call : <a class="purpleColor" href="">650-200-3406</a></p>
+        </article>
 
-      <h2 class="featurette-heading fw-normal lh-1 py-3" data-aos="fade-right"  data-aos-delay="50"data-aos-duration="1000"data-aos-easing="ease-in-out" > 100+ years </h2>
-      <p class="p-text">of experience in management, finance and legal expertise in the industry. </p>
+        <article class="col-md-4" style="margin-bottom:40px">
+          <h3>  Current Project Enquiries </h3>
+          <h6> Please Call:  <a class="purpleColor" href="">650-200-3406</a>  </h6>
 
-      <h2 class="featurette-heading fw-normal lh-1 py-3"  > Done 1000s </h2>
-      <p class="p-text">of deals in various industries. </p>
+        </article>
 
-        <!-- <hr class="trail"> -->
-
-        <p class="trail"><span class="hr"></span> </p>
-
-        <p class="p-text" style="margin-bottom: 75px;">Many Americans view homeownership as a critical piece of “the American dream.”
-          <br><br>
-          We provide an individualized approach that helps them achieve their goal so they can live with a peace of mind and look forward to future with a bright smile. 
-        </p>
-
-            <div>
-              <a class=" button wooden-a mt-4" style="text-transform: capitalize; text-decoration: none;" href="/free-discovery-call/" > READ FAQ </a>
-          </div>
-
-    </article>
-
-
-  
-    <article class="col-md-5">
-      <!-- smaller screen -->
-      <img style="border-radius: 25px;"  src="../static/img/people/Cmanager2-sm-c.jpg" class="img-fluid d-lg-none" alt="...">
-      <!-- large screen  -->
-      <img style="border-radius: 25px;"  src="../static/img/people/Cmanager2-c.jpg" class="img-fluid d-none d-lg-block" alt="...">
-    </article>
-
-  </div>
+      </div>
+    </section>
 </section>
-
 
 
   <!-- <div class="px-4 py-5 text-center" style="min-height: 500px; background-image: url('../../static/img/_New/wom-pho-c.jpg'); background-position: 21%; background-position:center; background-size: cover">
   </div> -->
-
-  <!-- smaller screen -->
-  <img  src="../../static/img/_New/wom-pho-c.jpg" class="img-fluid d-lg-none" alt="...">
-  <!-- large screen  -->
-  <img src="../../static/img/_New/wom-pho-c.jpg" class="img-fluid d-none d-lg-block" alt="...">
-
 
 
   <section class="container-full">
