--- a/public/free-discovery-call/index.html
+++ b/public/free-discovery-call/index.html
@@ -213,17 +213,19 @@
 
         <article class="col-md-4" style="margin-bottom:40px">
           <h2 class="">  Please fill the short form below </h2>
+          <br/>
           <h6> We will send you more information.</h6>
         </article>
 
         <article class="col-md-4" style="margin-bottom:40px">
           <h3>  Home Building Enquiries </h3>
+          <br/>
           <h6> Its absolutely free of cost. </h6>
             <p>Call : <a class="purpleColor" href="">650-200-3406</a></p>
         </article>
 
         <article class="col-md-4" style="margin-bottom:40px">
-          <h3>  Current Project Enquiries </h3>
+          <h3>  Current Project Enquiries </h3> <br/>
           <h6> Please Call:  <a class="purpleColor" href="">650-200-3406</a>  </h6>
 
         </article>
@@ -231,6 +233,46 @@
       </div>
     </section>
 </section>
+
+
+
+<!-- subscribe  -->
+<section class="container-full" style="background-color: white;">
+  <section class="container">
+    <section class="subscribe py-5">
+      <div class="container">
+          <div class="row justify-content-center">
+              <div class="col-md-4">
+                  <div class="subscribe-heading text-white text-md-end text-center">
+                      <h5 style="color: black;" class="fs-4 fw-light m-0 mb-md-0 mb-3">Subscribe for newsletters</h5>
+                  </div>
+              </div>
+              <div class="col-md-4">
+                  <form class="d-flex justify-content-center">
+                      <div class="input-group">
+                          <input type="email" class="form-control form-control-sm" placeholder="Your email">
+                          <button style="z-index: 0; background-color: brown;" type="submit" class="btn btn-sm btn-success d-inline-flex align-items-center">
+                              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="me-2 bi bi-envelope-check-fill" viewBox="0 0 16 16">
+                                  <path d="M.05 3.555A2 2 0 0 1 2 2h12a2 2 0 0 1 1.95 1.555L8 8.414.05 3.555ZM0 4.697v7.104l5.803-3.558L0 4.697ZM6.761 8.83l-6.57 4.026A2 2 0 0 0 2 14h6.256A4.493 4.493 0 0 1 8 12.5a4.49 4.49 0 0 1 1.606-3.446l-.367-.225L8 9.586l-1.239-.757ZM16 4.697v4.974A4.491 4.491 0 0 0 12.5 8a4.49 4.49 0 0 0-1.965.45l-.338-.207L16 4.697Z"/>
+                                  <path d="M16 12.5a3.5 3.5 0 1 1-7 0 3.5 3.5 0 0 1 7 0Zm-1.993-1.679a.5.5 0 0 0-.686.172l-1.17 1.95-.547-.547a.5.5 0 0 0-.708.708l.774.773a.75.75 0 0 0 1.174-.144l1.335-2.226a.5.5 0 0 0-.172-.686Z"/>
+                              </svg>
+                              Subscribe
+                          </button>
+
+                          <!-- <a class="button h-top-btn wooden-a"
+                            style="text-transform: capitalize; text-decoration: none; line-height: 17px; "
+                            href="/free-discovery-call/"> Subscribe
+                          </a> -->
+                          
+                      </div>
+                  </form>
+              </div>
+          </div>
+      </div>
+  </section>
+</section>
+</section>
+
 
 
   <!-- <div class="px-4 py-5 text-center" style="min-height: 500px; background-image: url('../../static/img/_New/wom-pho-c.jpg'); background-position: 21%; background-position:center; background-size: cover">
