--- a/public/index.html
+++ b/public/index.html
@@ -96,25 +96,19 @@
         </li>
 
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle text-white" href="#" role="button" data-bs-toggle="dropdown"
+          <a class="nav-link dropdown-toggle text-white" href="/join-us" role="button" data-bs-toggle="dropdown"
             aria-expanded="false">
             Join us
           </a>
-          <ul class="dropdown-menu text-white">
-            <li><a class="dropdown-item" href="paul">Project Manager</a></li>
-            <li>
-              <hr class="dropdown-divider">
-            </li>
-            <li><a class="dropdown-item" href="#">Construction Manager</a></li>
-            <li>
-              <hr class="dropdown-divider">
-            </li>
-            <li><a class="dropdown-item" href="#">VP of Land Development </a></li>
-            <li>
-              <hr class="dropdown-divider">
-            </li>
-            <li><a class="dropdown-item" href="/join-us">All opening </a></li>
-          </ul>
+            <ul class="dropdown-menu text-white">
+              <li><a class="dropdown-item" href="/pManager">Project Manager</a></li>
+              <li><hr class="dropdown-divider"></li>
+              <li><a class="dropdown-item" href="/CManager">Construction Manager</a></li>
+              <li><hr class="dropdown-divider"></li>
+              <li><a class="dropdown-item" href="/vp-of-land">VP of Land Development </a></li>
+              <li><hr class="dropdown-divider"></li>
+              <li><a class="dropdown-item" href="">All opening </a></li>
+            </ul>
         </li>
 
         <li class="nav-item">
@@ -144,12 +138,12 @@
 
           </p>
 
-          <p style="margin-top: 110px;" class="lead mb-0">
+          <p style="margin-top: 110px;" class="">
 
-            <a class="button h-top-btn wooden-a"
-              style="text-transform: capitalize; text-decoration: none; line-height: 17px; "
+            <!-- <a class="button h-top-btn wooden-a"
+              style="text-transform: capitalize; line-height: 17px; "
               href="/free-discovery-call/"> Free Initial Call
-            </a>
+            </a> -->
           </p>
         </div>
 
@@ -499,7 +493,7 @@
 
 
 
-  <footer class="container-full text-white" style="background-image: url('../static/img/woods/burgandy.webp');">
+  <footer class="container-full text-white" style="background-image: url('../static/img/woods/wood1.jpeg');">
     <div class="container ">
       <article class="d-flex flex-wrap justify-content-between align-items-center py-3">
         <!-- <p class="col-md-4 mb-0  text-white">&copy; 2024 Company, Inc 1</p> -->
