--- a/public/index.html
+++ b/public/index.html
@@ -96,8 +96,11 @@
         </li>
 
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle text-white" href="/join-us" role="button" data-bs-toggle="dropdown"
+          <!-- <a class="nav-link dropdown-toggle text-white" href="/join-us" role="button" data-bs-toggle="dropdown"
             aria-expanded="false">
+            Join us
+          </a> -->
+          <a class="nav-link  text-white" href="/join-us" role="button">
             Join us
           </a>
             <ul class="dropdown-menu text-white">
