join us page created

--- a/public/free-discovery-call/index.html
+++ b/public/free-discovery-call/index.html
@@ -313,7 +313,7 @@
   
 
 
-<footer class="container-full text-white" style="background-image: url('../static/img/woods/burgandy.webp');">
+<footer class="container-full text-white" style="background-image: url('../static/img/woods/wood1.jpeg'); ">
   <div class="container ">
     <article class="d-flex flex-wrap justify-content-between align-items-center py-3">
       <!-- <p class="col-md-4 mb-0  text-white">&copy; 2024 Company, Inc 1</p> -->
