--- a/public/about/index.html
+++ b/public/about/index.html
@@ -138,8 +138,8 @@
                     
                       <li class="nav-item dropdown">
                         <!-- dropdown-toggle -->
-                        <a class="nav-link dropbtn text-white" href="/join-us" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            Join us
+                        <a class="nav-link  text-white" href="/join-us" role="button">
+                          Join us
                         </a>
                         <ul class="dropdown-menu text-white">
                           <li><a class="dropdown-item" href="/pManager">Project Manager</a></li>
@@ -303,9 +303,9 @@
         <img width="75px"  src="../static/logo/l1.webp" alt="">
   
       <ul class="nav col text-white justify-content-end">
-        <li class="nav-item r-5"><a href="about" class="nav-link px-2  text-white">About us</a></li>
-        <li class="nav-item r-5"><a href="careers" class="nav-link px-2  text-white">Careers</a></li>
-        <li class="nav-item r-5"><a href="investors" class="nav-link px-2  text-white">Investors</a></li>
+        <li class="nav-item r-5"><a href="#" class="nav-link px-2  text-white">About us</a></li>
+        <li class="nav-item r-5"><a href="#" class="nav-link px-2  text-white">Careers</a></li>
+        <li class="nav-item r-5"><a href="#" class="nav-link px-2  text-white">Investors</a></li>
         
       </ul>
     </article>
