form started on contact

--- a/public/about/index.html
+++ b/public/about/index.html
@@ -142,11 +142,11 @@
                           Join us
                         </a>
                         <ul class="dropdown-menu text-white">
-                          <li><a class="dropdown-item" href="/pManager">Project Manager</a></li>
+                          <li><a class="dropdown-item" href="../pManager">Project Manager</a></li>
                           <li><hr class="dropdown-divider"></li>
-                          <li><a class="dropdown-item" href="/CManager">Construction Manager</a></li>
+                          <li><a class="dropdown-item" href="../CManager">Construction Manager</a></li>
                           <li><hr class="dropdown-divider"></li>
-                          <li><a class="dropdown-item" href="/vp-of-land">VP of Land Development </a></li>
+                          <li><a class="dropdown-item" href="../vp-of-land">VP of Land Development </a></li>
                           <li><hr class="dropdown-divider"></li>
                           <li><a class="dropdown-item" href="">All opening </a></li>
                         </ul>
