--- a/public/index.html
+++ b/public/index.html
@@ -115,7 +115,7 @@
         </li>
 
         <li class="nav-item">
-          <a class="nav-link text-white" href="#">Contact</a>
+          <a class="nav-link text-white" href="/contact">Contact</a>
         </li>
         <li class="nav-item">
           <a class="nav-link text-white" href="#">Free discovery call</a> <!--  Jay - make it ghost button -->
