--- a/public/contact/index.html
+++ b/public/contact/index.html
@@ -284,7 +284,7 @@
       <div class="col-12 offset-12">
         <a type="submit" class="button h-top-btn wooden-a"
         style="text-transform: capitalize; text-decoration: none; line-height: 17px; "
-        href="/free-discovery-call/"> Submit Message
+        href="/free-discovery-call/"> Send Message
       </a>
       </div>
 
