--- a/public/join-us/index.html
+++ b/public/join-us/index.html
@@ -144,7 +144,7 @@
                         <ul class="dropdown-menu text-white">
                           <li><a class="dropdown-item" href="/pManager">Project Manager</a></li>
                           <li><hr class="dropdown-divider"></li>
-                          <li><a class="dropdown-item" href="/CManager">Construction Manager</a></li>
+                          <li><a class="dropdown-item" href="/sitemanager">Site Manager</a></li>
                           <li><hr class="dropdown-divider"></li>
                           <li><a class="dropdown-item" href="/vp-of-land">VP of Land Development </a></li>
                           <li><hr class="dropdown-divider"></li>
@@ -286,9 +286,9 @@
     <article class="col-md-6">
       <!-- smaller screen -->
   
-      <p class="trail"><span class="hr"></span>Construction MANAGER</p>
+      <p class="trail"><span class="hr"></span>Construction Site MANAGER</p>
       <br/>
-      <p class="p-text"> The Construction Manager manages all functions of the construction job site as it relates to building quality residential homes. 
+      <p class="p-text"> The Site manager manages all functions of the construction job site as it relates to building quality residential homes. 
         </p>
         <br>
        
@@ -304,9 +304,9 @@
 
     <article class="col-md-6" style="margin-bottom:40px">
       
-      <img style="border-radius: 25px;"  src="../static/img/people/Cmanager-c.jpg" class="img-fluid d-lg-none" alt="...">
+      <img style="border-radius: 25px;"  src="../static/img/people/cmanager-c.jpg" class="img-fluid d-lg-none" alt="...">
       <!-- large screen  -->
-      <img style="border-radius: 25px;"  src="../static/img/people/Cmanager-c.jpg" class="img-fluid d-none d-lg-block" alt="...">
+      <img style="border-radius: 25px;"  src="../static/img/people/cmanager-c.jpg" class="img-fluid d-none d-lg-block" alt="...">
 
     </article>
 
