--- a/public/sitemanager/index.html
+++ b/public/sitemanager/index.html
@@ -10,7 +10,7 @@
     <link rel="icon" href="../static/logo/eqlogo.png" sizes="32x32" />
   <link rel="icon" href="../static/logo/eqlogo.png" sizes="192x192" />
   <link rel="apple-touch-icon" href="../static/logo/eqlogo.png" />
-    <title>Construction Manager | Equity Group </title>
+    <title>Site Manager | Equity Group </title>
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@docsearch/css@3">
     
@@ -143,7 +143,7 @@
                         <ul class="dropdown-menu text-white">
                           <li><a class="dropdown-item" href="/pManager">Project Manager</a></li>
                           <li><hr class="dropdown-divider"></li>
-                          <li><a class="dropdown-item" href="/CManager">Construction Manager</a></li>
+                          <li><a class="dropdown-item" href="/sitemanager">Site Manager</a></li>
                           <li><hr class="dropdown-divider"></li>
                           <li><a class="dropdown-item" href="/vp-of-land">VP of Land Development </a></li>
                           <li><hr class="dropdown-divider"></li>
@@ -182,7 +182,7 @@
 <main>
 
   <!-- style="filter: brightness(75%); -->
-  <section class="about-pic text-secondary px-5 py-5 " style="background-image: url('../../static/img/people/Cmanager2-c.jpg');  background-position-y: top; background-size: 1050px; ">
+  <section class="about-pic text-secondary px-5 py-5 " style="background-image: url('../../static/img/people/cmanager2-c.jpg');  background-position-y: top; background-size: 1050px; ">
 
     <div class="py-5">  
     <div class="row align-items-center g-lg-5 py-5">
@@ -225,12 +225,14 @@
     </article>
 
   
-    <article class="col-md-5">
-      <!-- smaller screen -->
-      <img style="border-radius: 25px;"  src="../static/img/people/ofst6-c.jpg" class="img-fluid d-lg-none" alt="...">
-      <!-- large screen  -->
-      <img style="border-radius: 25px;"  src="../static/img/people/ofst6-c.jpg" class="img-fluid d-none d-lg-block" alt="...">
+    <article class="col-md-4 h-100" style="min-height: 200px; background-color: #F7F7F7; border-radius: 25px;">
+
+      <h2 style="color:black; " class=" text-center applicationsAccepted"> Applications Are Now Being Accepted (Site Manager)
+      </h2>
+      <p class="text-center">Opportunities with Equity Group</p>
     </article>
+
+
 
   </div>
 </section>
@@ -240,9 +242,9 @@
   <div class="row py-5">
     <article class="col-md-6" style="margin-bottom:40px">
       
-      <img style="border-radius: 25px;"  src="../static/img/people/Cmanager-c.jpg" class="img-fluid d-lg-none" alt="...">
+      <img style="border-radius: 25px;"  src="../static/img/people/cmanager-c.jpg" class="img-fluid d-lg-none" alt="...">
       <!-- large screen  -->
-      <img style="border-radius: 25px;"  src="../static/img/people/Cmanager-c.jpg" class="img-fluid d-none d-lg-block" alt="...">
+      <img style="border-radius: 25px;"  src="../static/img/people/cmanager-c.jpg" class="img-fluid d-none d-lg-block" alt="...">
 
     </article>
 
