--- a/public/about/index.html
+++ b/public/about/index.html
@@ -144,7 +144,7 @@
                         <ul class="dropdown-menu text-white">
                           <li><a class="dropdown-item" href="../pManager">Project Manager</a></li>
                           <li><hr class="dropdown-divider"></li>
-                          <li><a class="dropdown-item" href="../CManager">Construction Manager</a></li>
+                          <li><a class="dropdown-item" href="../sitemanager">Construction Manager</a></li>
                           <li><hr class="dropdown-divider"></li>
                           <li><a class="dropdown-item" href="../vp-of-land">VP of Land Development </a></li>
                           <li><hr class="dropdown-divider"></li>
@@ -242,9 +242,9 @@
   
     <article class="col-md-5">
       <!-- smaller screen -->
-      <img style="border-radius: 25px;"  src="../static/img/people/Cmanager2-sm-c.jpg" class="img-fluid d-lg-none" alt="...">
+      <img style="border-radius: 25px;"  src="../static/img/people/cmanager2-sm-c.jpg" class="img-fluid d-lg-none" alt="...">
       <!-- large screen  -->
-      <img style="border-radius: 25px;"  src="../static/img/people/Cmanager2-c.jpg" class="img-fluid d-none d-lg-block" alt="...">
+      <img style="border-radius: 25px;"  src="../static/img/people/cmanager2-c.jpg" class="img-fluid d-none d-lg-block" alt="...">
     </article>
 
   </div>
@@ -262,10 +262,10 @@
 
 
 
-  <section class="container-full">
+  <!-- <section class="container-full">
     <img  src="../static/img/about/sm.png" class="img-fluid d-lg-none" alt="...">
     <img src="../static/img/about/md.png" class="img-fluid d-none d-lg-block" alt="...">
-  </section>
+  </section> -->
 
 
 
