--- a/public/pmanager/index.html
+++ b/public/pmanager/index.html
@@ -143,7 +143,7 @@
                         <ul class="dropdown-menu text-white">
                           <li><a class="dropdown-item" href="/pManager">Project Manager</a></li>
                           <li><hr class="dropdown-divider"></li>
-                          <li><a class="dropdown-item" href="/CManager">Construction Manager</a></li>
+                          <li><a class="dropdown-item" href="/sitemanager">Site Manager</a></li>
                           <li><hr class="dropdown-divider"></li>
                           <li><a class="dropdown-item" href="/vp-of-land">VP of Land Development </a></li>
                           <li><hr class="dropdown-divider"></li>
