updated liks for free discovery call

--- a/public/paul/index.html
+++ b/public/paul/index.html
@@ -152,7 +152,7 @@
                         <a class="nav-link text-white" href="#">Contact</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link text-white" href="#">Free discovery call</a>    <!--  Jay - make it ghost button -->
+                        <a class="nav-link text-white" href="/free-discovery-call">Free discovery call</a>    <!--  Jay - make it ghost button -->
                       </li>
                       
                     </ul>
