join us nav btn now working

--- a/public/Right.html
+++ b/public/Right.html
@@ -110,7 +110,7 @@
                             Join us
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="#">Project Manager</a></li>
+                            <li><a class="dropdown-item" href="/pManager">Project Manager</a></li>
                             <li><a class="dropdown-item" href="#">Constructoin Manager</a></li>
                             <li><a class="dropdown-item" href="#">VP of land development</a></li>
                             <li><a class="dropdown-item" href="#">VP of land development</a></li>
