--- a/public/index.html
+++ b/public/index.html
@@ -112,9 +112,7 @@
             aria-expanded="false">
             Join us
           </a> -->
-          <a class="nav-link  text-white" href="/join-us" role="button">
-            Join us
-          </a>
+          <a class="nav-link  text-white" href="/join-us" role="button">Join us</a>
             <ul class="dropdown-menu text-white">
               <li><a class="dropdown-item" href="/pManager">Project Manager</a></li>
               <li><hr class="dropdown-divider"></li>
