--- a/public/about/index.html
+++ b/public/about/index.html
@@ -138,9 +138,7 @@
                     
                       <li class="nav-item dropdown">
                         <!-- dropdown-toggle -->
-                        <a class="nav-link  text-white" href="/join-us" role="button">
-                          Join us
-                        </a>
+                        <a class="nav-link  text-white" href="/join-us" role="button">Join us</a>
                         <ul class="dropdown-menu text-white">
                           <li><a class="dropdown-item" href="../pManager">Project Manager</a></li>
                           <li><hr class="dropdown-divider"></li>
