--- a/public/home/index.html
+++ b/public/home/index.html
@@ -43,13 +43,13 @@
                         Join us
                     </a>
                     <ul class="dropdown-menu text-white">
-                      <li><a class="dropdown-item" href="#">Project Manager</a></li>
+                      <li><a class="dropdown-item" href="/pManager">Project Manager</a></li>
                       <li><hr class="dropdown-divider"></li>
-                      <li><a class="dropdown-item" href="#">Construction Manager</a></li>
+                      <li><a class="dropdown-item" href="/sitemanager">Site Manager</a></li>
                       <li><hr class="dropdown-divider"></li>
-                      <li><a class="dropdown-item" href="#">VP of Land Development </a></li>
+                      <li><a class="dropdown-item" href="/vp-of-land">VP of Land Development </a></li>
                       <li><hr class="dropdown-divider"></li>
-                      <li><a class="dropdown-item" href="#">All opening </a></li>
+                      
                     </ul>
                   </li>
 
