--- a/public/sitemanager/index.html
+++ b/public/sitemanager/index.html
@@ -137,9 +137,7 @@
                     
                       <li class="nav-item dropdown">
                         <!-- dropdown-toggle -->
-                        <a class="nav-link dropbtn text-white" href="/join-us" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            Join us
-                        </a>
+                        <a class="nav-link  text-white" href="/join-us" role="button">Join us</a>
                         <ul class="dropdown-menu text-white">
                           <li><a class="dropdown-item" href="/pManager">Project Manager</a></li>
                           <li><hr class="dropdown-divider"></li>
