--- a/public/Right.html
+++ b/public/Right.html
@@ -114,7 +114,7 @@
                             <li><a class="dropdown-item" href="#">Constructoin Manager</a></li>
                             <li><a class="dropdown-item" href="#">VP of land development</a></li>
                             <li><a class="dropdown-item" href="#">VP of land development</a></li>
-                            <li><a class="dropdown-item" href="#">All Openings</a></li>
+                            <li><a class="dropdown-item" href="/interns">Internship</a></li>
                             <li>
                                 <hr class="dropdown-divider">
                             </li>
