--- a/public/index.html
+++ b/public/index.html
@@ -120,7 +120,7 @@
               <li><hr class="dropdown-divider"></li>
               <li><a class="dropdown-item" href="/vp-of-land">VP of Land Development </a></li>
               <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="">All opening </a></li>
+              <li><a class="dropdown-item" href="/interns">Internship</a></li>
             </ul>
         </li>
 
