--- a/public/contact/index.html
+++ b/public/contact/index.html
@@ -146,6 +146,7 @@
                           <li><hr class="dropdown-divider"></li>
                           <li><a class="dropdown-item" href="/vp-of-land">VP of Land Development </a></li>
                           <li><hr class="dropdown-divider"></li>
+                          <li><a class="dropdown-item" href="/interns">Internship</a></li>
                           
                         </ul>
                       </li>
